--- a/Assignments/A01_Introduction.Rmd
+++ b/Assignments/A01_Introduction.Rmd
@@ -1,6 +1,6 @@
 ---
 title: "Assignment 1: Introduction"
-author: "Student Name"
+author: "Jackie Van Der Hout"
 output: pdf_document
 geometry: margin=2.54cm
 ---
@@ -22,21 +22,21 @@ The completed exercise is due on <>.
 
 1. What are your previous experiences with data analytics, R, and Git? Include both formal and informal training.
 
-> Answer: 
+> Answer: I have completed the first 11 chapters of R for Data Science as well as the "History of Teacup Giraffes" R Workbook. Additionally I have some experience following along with R scripts from Martin Doyle's hydrology class. 
 
 2. Are there any components of the course about which you feel confident?
 
-> Answer: 
+> Answer: I feel confident with some basic commands.
 
 3. Are there any components of the course about which you feel apprehensive?
 
-> Answer: 
+> Answer: Learning to read and understand R code. 
 
 
 ## 2) GitHub
 
 Provide a link below to your forked course repository in GitHub. Make sure you have pulled all recent changes from the course repository  and that you have updated your course README file. 
 
-> Answer: 
+> Answer: https://github.com/JVanDerHout/Environmental_Data_Analytics_2022.git
 
 
