--- a/Assignments/A02_CodingBasics.Rmd
+++ b/Assignments/A02_CodingBasics.Rmd
@@ -1,6 +1,6 @@
 ---
 title: "Assignment 2: Coding Basics"
-author: "Student Name"
+author: "Jackie"
 output: pdf_document
 geometry: margin=2.54cm
 editor_options: 
@@ -32,11 +32,16 @@ This exercise accompanies the lessons in Environmental Data Analytics on coding 
 
 ```{r}
 #1. 
+seq100 <- seq(1, 100, 4) #making an object of the sequence 
 
 #2. 
+meanseq100 <-   mean(seq100) #computing the mean of the sequence
+medseq100 <- median(seq100) #computing the median of sequence
 
 #3. 
-
+meanseq100 > medseq100 #false 
+meanseq100 < medseq100 #false
+meanseq100 == medseq100 #true 
 ```
 
 ## Basics Day 2
@@ -51,11 +56,22 @@ This exercise accompanies the lessons in Environmental Data Analytics on coding 
 
 ```{r}
 
+students <- c("Homer", "Marge", "Lisa", "Bart") #character
+scores <- c(62, 89, 99, 25) #numeric
+pass <- c(TRUE, TRUE, TRUE, FALSE) #logical 
+
+
+grading <- data.frame ('students'=c("Homer", "Marge", "Lisa", "Bart"), 'scores'=c(62, 89, 99, 25), 'pass'=c(TRUE, TRUE, TRUE, FALSE)) #creating the data frame
+
+grading #viewing the data frame
+class(grading) #verifying that "grading" is a data frame
+transposed.grading <- t(grading) #created transposed version to see if this would change anything 
+
 ```
 
 9. QUESTION: How is this data frame different from a matrix?
 
-> Answer: 
+> Answer: The main difference between a matrix and a data frame is that data frames can have multiple classes of data where as matrices contain only data of the same type. 
 
 10. Create a function with an if/else statement. Your function should determine whether a test score is a passing grade of 50 or above (TRUE or FALSE). You will need to choose either the `if` and `else` statements or the `ifelse` statement. Hint: Use `print`, not `return`. The name of your function should be informative.
 
@@ -63,8 +79,28 @@ This exercise accompanies the lessons in Environmental Data Analytics on coding 
 
 ```{r}
 
+passfail <- function(x) {
+  if(x > 50) 
+    x = "PASS"
+  else 
+    x = "FAIL"
+} 
+
+passfail <- function(x){
+  ifelse(x<50, "FAIL", "PASS") 
+  
+}
+
+#neither of these functions are picking up on a fail grade from bart
+#tried it with both original and transposed data frame
+homergrade <- passfail("grading$homer"); homergrade
+margegrade <- passfail("grading$marge"); margegrade
+lisagrade <- passfail("grading$lisa"); lisagrade
+bartgrade <- passfail("grading$bart"); bartgrade #says pass but should say fail
+results <- passfail("grading$scores")
+passfail(scores) #this does work... but can't get it to run on the whole df...
 ```
 
 12. QUESTION: Which option of `if` and `else` vs. `ifelse` worked? Why?
 
-> Answer: 
+> Answer: ifelse worked because it checked each item in the vector as opposed to just the first one, as if and else would do individually 
