--- a/Lessons/03_DataExploration_Part1.Rmd
+++ b/Lessons/03_DataExploration_Part1.Rmd
@@ -35,7 +35,7 @@ If your working directory is not set to the folder you want, you have several op
 
 ```{r}
 # Absolute file path is commented out
-setwd("/Users/lmm89/OneDrive/Duke_University/7_Spring2021/ENV872_EDA/GitRepo_EDA_S2021/Environmental_Data_Analytics_2021")
+#setwd("/Users/lmm89/OneDrive/Duke_University/7_Spring2021/ENV872_EDA/GitRepo_EDA_S2021/Environmental_Data_Analytics_2021")
 ```
 
 You may change your working directory without coding by going to the Session menu in RStudio and navigating to the Set Working Directory tab. From there, you may select from a series of options to reset your working directory. 
@@ -78,7 +78,7 @@ library(tidyverse)
 
 Question: What happens in the console when you load a package?
 
-> Answer: 
+> Answer: In the casde of tidyverse, packages are attached 
 
 ### Import your datasets
 
@@ -100,7 +100,7 @@ Commons functions to import datasets and store as data frames are *read.table()*
 #read.csv("/Users/lmm89/OneDrive/Duke_University/7_Spring2021/ENV872_EDA/GitRepo_EDA_S2021/Environmental_Data_Analytics_2021/Data/Raw/USGS_Site02085000_Flow_Raw.csv")
 
 # Relative file path (friendly for users regardless of machine)
-USGS.flow.data <- read.csv("../Data/Raw/USGS_Site02085000_Flow_Raw.csv")   
+USGS.flow.data <- read.csv("Data/Raw/USGS_Site02085000_Flow_Raw.csv")   
 #For knitting the .Rmd file you need to added an extra "." to the relative path
 # R Markdown documents are compiled in separate R sessions to enhance reproducibility, so you current R console has nothing to do with the compilation of the R Markdown documents.
 
@@ -119,13 +119,13 @@ USGS.flow.data <- read.csv("../Data/Raw/USGS_Site02085000_Flow_Raw.csv")
 ## EXPLORE YOUR DATASET
 
 Take a moment to read through the README file associated with the USGS dataset on discharge at the Eno River. Where can you find this file? How does the placement and information found in this file relate to the best practices for reproducible data analysis?
-> ANSWER: 
+> ANSWER: The file can be found in the metadata folder in the class directory. In reproduceable data it is a good idea to have a folder for metadata for each corresponding raw data set to describe the data. 
 
 ```{r exploredata}
 View(USGS.flow.data)
 # Alternate option: click on data frame in Environment tab
 
-class(USGS.flow.data)
+class(USGS.flow.data) #data frame
 colnames(USGS.flow.data)
 
 # Rename columns
@@ -145,16 +145,16 @@ head(USGS.flow.data, 10)
 tail(USGS.flow.data, 5)
 USGS.flow.data[30000:30005, c(3, 8, 14)]
 
-class(USGS.flow.data$datetime)
-class(USGS.flow.data$discharge.mean)
-class(USGS.flow.data$gage.height.mean)
+class(USGS.flow.data$datetime) #currently a character
+class(USGS.flow.data$discharge.mean) #numeric
+class(USGS.flow.data$gage.height.mean) #numeric
 
 summary(USGS.flow.data)  #could point to column only with $
 
 ```
 
 What happened to blank cells in the spreadsheet when they were imported into R?
-> Answer: 
+> Answer: Blank cells were assigned "NA" 
 
 ## Adjusting Datasets
 
@@ -163,20 +163,20 @@ What happened to blank cells in the spreadsheet when they were imported into R?
 Notice in our dataset that our discharge and gage height observations have many NAs, meaning no measurement was recorded for a specific day. In some cases, it might be in our best interest to remove NAs from a dataset. Removing NAs or not will depend on your research question.
 
 ```{r findNA}
-summary(USGS.flow.data$discharge.mean)
+summary(USGS.flow.data$discharge.mean) #this shows us how many NA's we have in this column
 summary(USGS.flow.data$gage.height.mean)
 ```
 Question: What types of research questions might make it favorable to remove NAs from a dataset, and what types of research questions might make it favorable to retain NAs in the dataset?
 
-> Answer: 
+> Answer: You never remove NA values when doing timeseries analysis. It may be okay to remove NAs for other types of analysis. 
 
 ```{r removeNA}
-USGS.flow.data.complete <- na.omit(USGS.flow.data)
+USGS.flow.data.complete <- na.omit(USGS.flow.data) #na.omit removes NAs
 dim(USGS.flow.data)
-dim(USGS.flow.data.complete)
+dim(USGS.flow.data.complete) #now it is a much smaller dataset
 
-mean(USGS.flow.data.complete$discharge.mean)
-sd(USGS.flow.data.complete$discharge.mean)
+mean(USGS.flow.data.complete$discharge.mean) #mean 51.09
+sd(USGS.flow.data.complete$discharge.mean) #standard deviation 137.21
 summary(USGS.flow.data.complete$discharge.mean)
 
 ```
@@ -208,17 +208,19 @@ USGS.flow.data$datetime <- as.Date(USGS.flow.data$datetime, format = "%m/%d/%y")
 Note that for every date prior to 1969, R has assigned the date in the 2000s rather than the 1900s. This can be fixed with an `ifelse` statement inside a function. Run through the code below and write what is happening in the comment above each line.
 
 ```{r fixformartDate}
-# 
+# converting from dates back into characters with just two numbers for the year
 USGS.flow.data$datetime <- format(USGS.flow.data$datetime, "%y%m%d")
 
-#
+#from anything smaller than 191229, adding 19 infront of the year. 
+#for any dates larger than 191229, adding 20 infront of the year
+#both of these "adding" functions use the paste0 function to d (the input)
 create.early.dates <- (function(d) {
        paste0(ifelse(d > 191226,"19","20"),d)
        })
-#
+#running above function on the datetime column
 USGS.flow.data$datetime <- create.early.dates(USGS.flow.data$datetime)
 
-#
+#now converting that column from character back to dates
 USGS.flow.data$datetime <- as.Date(USGS.flow.data$datetime, format = "%Y%m%d") 
 
 ```
@@ -230,7 +232,7 @@ We just edited our raw dataset into a processed form. We may want to return to t
 
 ```{r savingdata}
 # Note the added "." again for .Rmd 
-write.csv(USGS.flow.data, file = "../Data/Processed/USGS_Site02085000_Flow_Processed.csv", row.names=FALSE)
+write.csv(USGS.flow.data, file = "/Users/Jackie/Box/Classes Spring 2022/Environmental Data Analytics/Environmental_Data_Analytics_2022/Data/Processed/USGS_Site02085000_Flow_Processed.csv", row.names=FALSE)
 
 ```
 
